@@ -12,8 +12,10 @@ Log:
 	Tested under Linux with:
 	- GreyLink: api: ok
 	- BlackLink: asm: ok, ioctl: ok, module: ?? 
-	- SilverLink: ioctl & module
+	- SilverLink: ioctl: ok, module: ok (both ok in 2.4 only) 
 	- Parallel: asm: ??, module: ??
+	Wake-up sequence removed from serial & parallel cables because it 
+	perturbates communication start-up.
 	
 - 01/03/2004, version 3.7.9: tijl
 	BSD usb fix in libticables
